added booking confirmation pages

--- a/available.html
+++ b/available.html
@@ -352,7 +352,7 @@
     <script src="js/plugins/morris/morris-data.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
