--- a/bookings.html
+++ b/bookings.html
@@ -171,7 +171,7 @@
                                 <div class="panel-footer pull-right">
                                     <!-- Kareem: remember to change this to a button or input when using this as a form -->
                                     <!-- <button type="button" class="btn btn-primary">Search</button> -->
-                                    <a href="results.html" class="btn btn-success">Cancel</a>
+                                    <a href="bookings_closeup.html" class="btn btn-success">More Info</a>
                                 </div>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                                 <div class="panel-footer pull-right">
                                     <!-- Kareem: remember to change this to a button or input when using this as a form -->
                                     <!-- <button type="button" class="btn btn-primary">Search</button> -->
-                                    <a href="results.html" class="btn btn-success">Cancel</a>
+                                    <a href="bookings_closeup.html" class="btn btn-success">More Info</a>
                                 </div>
                             </div>
                         </div>
@@ -239,7 +239,7 @@
                                 <div class="panel-footer pull-right">
                                     <!-- Kareem: remember to change this to a button or input when using this as a form -->
                                     <!-- <button type="button" class="btn btn-primary">Search</button> -->
-                                    <a href="results.html" class="btn btn-success">Cancel</a>
+                                    <a href="bookings_closeup.html" class="btn btn-success">More Info</a>
                                 </div>
                             </div>
                         </div>
@@ -274,7 +274,7 @@
                                     <div class="panel-footer pull-right">
                                         <!-- Kareem: remember to change this to a button or input when using this as a form -->
                                         <!-- <button type="button" class="btn btn-primary">Search</button> -->
-                                        <a href="results.html" class="btn btn-success">Cancel</a>
+                                        <a href="bookings_closeup.html" class="btn btn-success">More Info</a>
                                     </div>
                                 </div>
                             </div>
@@ -307,13 +307,8 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="js/plugins/metisMenu/metisMenu.min.js"></script>
 
-    <!-- Morris Charts JavaScript -->
-    <script src="js/plugins/morris/raphael.min.js"></script>
-    <script src="js/plugins/morris/morris.min.js"></script>
-    <script src="js/plugins/morris/morris-data.js"></script>
-
     <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
