--- a/results.html
+++ b/results.html
@@ -215,7 +215,7 @@
                         <div class="panel-footer pull-right">
                             <!-- Kareem: remember to change this to a button or input when using this as a form -->
                             <!-- <button type="button" class="btn btn-primary">Search</button> -->
-                            <a href="results.html" class="btn btn-primary">Book</a>
+                            <a href="results_closeup.html" class="btn btn-primary">Book</a>
                         </div>
                     </div>
                 </div>
@@ -249,7 +249,7 @@
                         <div class="panel-footer pull-right">
                             <!-- Kareem: remember to change this to a button or input when using this as a form -->
                             <!-- <button type="button" class="btn btn-primary">Search</button> -->
-                            <a href="results.html" class="btn btn-primary">Book</a>
+                            <a href="results_closeup.html" class="btn btn-primary">Book</a>
                         </div>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
                         <div class="panel-footer pull-right">
                             <!-- Kareem: remember to change this to a button or input when using this as a form -->
                             <!-- <button type="button" class="btn btn-primary">Search</button> -->
-                            <a href="results.html" class="btn btn-primary">Book</a>
+                            <a href="results_closeup.html" class="btn btn-primary">Book</a>
                         </div>
                     </div>
                 </div>
@@ -317,7 +317,7 @@
                         <div class="panel-footer pull-right">
                             <!-- Kareem: remember to change this to a button or input when using this as a form -->
                             <!-- <button type="button" class="btn btn-primary">Search</button> -->
-                            <a href="results.html" class="btn btn-primary">Book</a>
+                            <a href="results_closeup.html" class="btn btn-primary">Book</a>
                         </div>
                     </div>
                 </div>
@@ -365,7 +365,7 @@
     <script src="js/plugins/morris/morris-data.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
