minor css fixes

--- a/bookings_closeup.html
+++ b/bookings_closeup.html
@@ -209,7 +209,7 @@
                     <div class="modal-body text-center">
                         <!-- Change this to a button or input when using this as a form -->
                         <p><strong>Are you sure you want to Cancel this room?</strong></p>
-                        <p><small>You might not be able to book this room again afterwards</small></p>
+                        <p><small>You might not be able to book this room again afterwards!</small></p>
                     </div>
                     <div class="modal-footer">
                         <a href="bookings.html" class="btn btn-danger btn-block">Cancel</a>
